XWIKI-16990: The selection drop-down list for Export Pages isn't working on half screen/browser, when the left/right panels are moved to the bottom of the page * The issue was caused by overlaying bootstrap columns on small screents. I droped the 2 columns layout in favor of a single column layour, as on master.

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/less/misc.less
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/less/misc.less
@@ -307,6 +307,23 @@ dl.export-tree-legend dt + dd {
   font-size: smaller;
 }
 
+#moreExportOptionsToggle {
+  color: @text-muted;
+  display: inline-block;
+  margin-bottom: @line-height-computed/2;
+}
+#moreExportOptionsToggle .more,
+#moreExportOptionsToggle.collapsed .less {
+  display: none;
+}
+#moreExportOptionsToggle.collapsed .more {
+  display: inline;
+}
+#moreExportOptionsToggle .more > span,
+#moreExportOptionsToggle .less > span {
+  margin-left: .3em;
+}
+
 // Loading --------------------------------------------------------------------
 .loading {
   background: transparent url(@xwiki-icon-spinner) no-repeat center;
